# Wsnly-Graduation-Project-Backend

./: .dockerignore  .gitignore  README.md  check_newlines.py  docker-compose.yml
API/: README.md
API/Wslny/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  requirements.txt
API/Wslny/protos/: interpreter.proto  routing.proto
API/Wslny/src/Core/Application/Admin/Commands/: ChangeUserRoleCommand.py
API/Wslny/src/Core/Application/Admin/Queries/: GetUsersQuery.py
API/Wslny/src/Core/Application/Admin/Services/: RouteAnalyticsService.py
API/Wslny/src/Core/Application/Authentication/Commands/: GoogleLoginCommand.py  LoginCommand.py  RegisterCommand.py
API/Wslny/src/Core/Application/Authentication/Common/: AuthenticationResult.py
API/Wslny/src/Core/Application/Authentication/Queries/: GetProfileQuery.py
API/Wslny/src/Core/Application/Common/Interfaces/: CQRS.py
API/Wslny/src/Core/Application/Common/Models/: Result.py
API/Wslny/src/Core/Domain/Constants/: Roles.py
API/Wslny/src/Core/Domain/Errors/: DomainErrors.py
API/Wslny/src/Infrastructure/GrpcClients/: ai_client.py  routing_client.py
API/Wslny/src/Infrastructure/History/: apps.py  models.py
API/Wslny/src/Infrastructure/History/migrations/: 0001_initial.py  0002_routehistory_preference_and_selection_fields.py  0003_backfill_has_result_for_existing_rows.py  0004_expand_routehistory_preference_choices.py
API/Wslny/src/Infrastructure/Identity/: apps.py  models.py
API/Wslny/src/Infrastructure/Identity/management/commands/: seed_admin.py
API/Wslny/src/Infrastructure/Identity/migrations/: 0001_initial.py  0002_user_is_superuser.py
API/Wslny/src/Presentation/: asgi.py  permissions.py  root_urls.py  schemas.py  settings.py  urls.py  wsgi.py
API/Wslny/src/Presentation/tests/: test_routing_and_analytics.py
API/Wslny/src/Presentation/urls/: admin_urls.py  auth_urls.py  route_urls.py
API/Wslny/src/Presentation/views/: admin_views.py  auth_views.py  orchestrator.py
Ai-Service/: Dockerfile  README.md  Requirements.txt  Server.py  geocoder.py  routing_client.py  test_real_request.py
Ai-Service/protos/: interpreter.proto
Ai-Service/tests/: test_flow.py
RoutingEngine/: .clangd  CMakeLists.txt  Dockerfile  README.md  algo.cpp  check_newlines.py  test.py
RoutingEngine/Database/: agency.csv  calendar.csv  routes.csv  stop_times.csv  stops.csv  trips.csv
RoutingEngine/include/: graph.hpp  pathfinder.hpp  service_impl.hpp  types.hpp
RoutingEngine/proto/: routing.proto
RoutingEngine/src/: graph.cpp  main.cpp  pathfinder.cpp  service_impl.cpp
RoutingEngine/tools/: validate_gtfs.py
shared/protos/: README.md
